--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <script type="module" src="sketch.js"></script>
+    <script src="sketch.js"></script>
     <script type="module" src="a-star.js"></script>
     <script type="module" src="main.js"></script>
   </body>
